<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>

    <string name="app_title">My Nanodegree Apps!</string>

    <string name="streamer_name">SPOTIFY STREAMER</string>
    <string name="scores_name">SCORES APP</string>
    <string name="library_name">LIBRARY APP</string>
    <string name="bigger_name">BUILD IT BIGGER</string>
    <string name="reader_name">XYZ READER</string>
    <string name="capstone_name">CAPSTONE: MY OWN APP</string>

    <string name="streamer_toast">This button will launch my Spotify Streamer app!</string>
    <string name="scores_toast">This button will launch my Scores app!</string>
    <string name="library_toast">This button will launch my Library app!</string>
    <string name="bigger_toast">This button will launch my Build It Bigger app!</string>
    <string name="reader_toast">This button will launch my XYZ Reader app!</string>
    <string name="capstone_toast">This button will launch my Capstone app!</string>
</resources>
