<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#E2EAF0">

    <TextView
        style="@style/TitleStyle"
        android:id="@+id/appTitle"
        android:text="@string/app_title" />

    <Button
        style="@style/MainButtonStyle"
        android:id="@+id/btnStreamer"
        android:text="@string/streamer_name"
        android:layout_below="@+id/appTitle"
        android:layout_marginTop="30dp"
        android:onClick="runStreamer"/>
    <Button
        style="@style/MainButtonStyle"
        android:id="@+id/btnScores"
        android:text="@string/scores_name"
        android:layout_below="@+id/btnStreamer"
        android:layout_marginTop="10dp"
        android:onClick="runScores"/>
    <Button
        style="@style/MainButtonStyle"
        android:id="@+id/btnLibrary"
        android:text="@string/library_name"
        android:layout_below="@+id/btnScores"
        android:layout_marginTop="10dp"
        android:onClick="runLibrary"/>
    <Button
        style="@style/MainButtonStyle"
        android:id="@+id/btnBigger"
        android:text="@string/bigger_name"
        android:layout_below="@+id/btnLibrary"
        android:layout_marginTop="10dp"
        android:onClick="runBuildItBigger"/>
    <Button
        style="@style/MainButtonStyle"
        android:id="@+id/btnReader"
        android:text="@string/reader_name"
        android:layout_below="@+id/btnBigger"
        android:layout_marginTop="10dp"
        android:onClick="runXyzReader"/>
    <Button
        style="@style/CapstoneButtonStyle"
        android:id="@+id/btnCapstone"
        android:text="@string/capstone_name"
        android:layout_below="@+id/btnReader"
        android:layout_marginTop="10dp"
        android:onClick="runCapstone"/>

</RelativeLayout>
